[package]
name = "crypt_decrypt_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
block-modes = "0.9.1"
cipher = "0.4.4"
kdmp-parser = "0.5.0"
libaes = "0.7.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
sha1 = "0.10.6"
symbolic = "12.12.1"
windows = { version = "0.58.0", features = ["Win32_Security_Cryptography", "Win32_Storage_FileSystem"] }
